@@ -103,6 +103,7 @@ Please visit http://aegisub.net to download latest version
 - The three different "Recombine Lines" were merged into one that autodetects needed changes, and also supports two new cases. (AMZ)
 - Added shortcut keys (escape to close and delete to delete a style, plus ctrl+c/v for copy/paste) to style manager. (Dansolo)
 - Added a dummy video provider to create a blank video with customizeable options. (jfs & AMZ)
+- Changing script resolution when asked to on video loading will now set an undo point. (AMZ)
 
 
 = 1.10 beta - 2006.08.07 ===========================
